helloworld-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-hello-world
  namespace: demo
  labels:
    app: nodejs-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-hello-world
  template:
    metadata:
      labels:
        app: nodejs-hello-world
    spec:
      containers:
      - name: nodejs-hello-world
        image: santhosh9790500644/bansira-node:latest
        ports:
        - containerPort: 3000
