helloworld-manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hello-world-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: nodejs-hello-world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
