helloworld-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx  # Use appropriate ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.gizgapod.shop    # Replace with your domain or leave it empty for IP-based access
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-hello-world-service  # Name of your Node.js service
                port:
                  number: 3000  # Port on which your service is listening
